fixed title on device not align properly
Fixed title on certain device

--- a/css/index.css
+++ b/css/index.css
@@ -1634,6 +1634,7 @@ footer {
 		text-align: center;
 		color: white;
 		font-size: 1em;
+		padding-top: 5em;
 	}
 
 	.bannerPicture .bannerText .mI {
